test_suite/tests/ui/unknown-attribute/container.stderr
error: unknown serde container attribute `abc`
 --> tests/ui/unknown-attribute/container.rs:4:9
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | #[serde(abc = "xyz")]
  |         ^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
