test_suite/tests/ui/unknown-attribute/container.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(abc = "xyz")]
struct A {
    x: u32,
}

fn main() {}
